--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       </head>
       <body>
         <p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <strong>JavaScript</strong>.</p>
+        <p>This is the second paragraph in a simple Static HTML site. This sentence should trigger a change.</p>
       </body>
     </html>
 
